# Devirtualization_Techniques

./: .gitignore  CMakeLists.txt  README.md  macro_final.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
